feat: 更新架构设计文档v0.8，新增5章内容
**v0.8架构文档更新**：

新增章节：
1. 第五章：平台抽成与结算机制
   - 抽成规则（5%社区/3%企业）
   - 结算表（含抽成细项）
   - 平台收入统计

2. 第六章：争议仲裁机制
   - 完整仲裁流程（4步）
   - 争议表
   - 争议证据表
   - 仲裁员表（未来扩展）

3. 第七章：防作弊机制
   - 防作弊策略
   - 技能测试记录（扩展防作弊数据）
   - 作品集验证记录
   - 同伴评议限制
   - 作弊举报记录

4. 第八章：最终信用计算API
   - 信用计算公式
   - 长期信用计算
   - 信用查询API

**文档大小**：
- v0.7: 1001行
- v0.8: 1300行（+30%）

**文件更新**：
- design/架构设计文档_v0.7.md → design/架构设计文档_v0.8.md
- README.md（更新目录和v0.8特性）

--- a/design/架构设计文档_v0.8.md
+++ b/design/架构设计文档_v0.8.md
@@ -999,3 +999,577 @@ const calculateFinalCredit = (initialScore, longTermScore, months) => {
 }
 ```
 
+
+---
+
+## 五、v0.8新增：平台抽成与结算机制
+
+### 5.1 抽成规则
+
+```
+平台抽成规则：
+├─ 社区模式：5%
+│  ├─ 发起人支付 ¥100
+│  └─ 参与者获得 ¥95
+│
+└─ 企业模式：3%
+    ├─ 发起人支付 ¥100
+    └─ 参与者获得 ¥97
+
+抽成用途：
+├─ 平台运营成本：60%
+├─ 社区治理基金：20%
+├─ Skill审核：10%
+└─ 法律合规：10%
+```
+
+### 5.2 抽成数据模型
+
+```typescript
+// 5.2.1 结算表（含抽成）
+model Settlement {
+  id              String    @id @default(uuid())
+  projectId       String
+  project         Project    @relation(fields: [projectId], references: [id])
+  
+  userId          String
+  user            User       @relation(fields: [userId], references: [id])
+  
+  taskId          String?
+  task            Task?      @relation(fields: [taskId], references: [id])
+  
+  // 金额明细
+  grossAmount     Float      // 原始金额
+  platformFee     Float      // 平台抽成
+  netAmount       Float      // 净额（参与者和发起人获得）
+  
+  // 抽成明细
+  feeBreakdown    Json?      // 抽成细项
+  // {
+  //   "operation": 60%,      // 平台运营
+  //   "governance": 20%,    // 社区治理
+  //   "skill_audit": 10%,   // Skill审核
+  //   "legal": 10%          // 法律合规
+  // }
+  
+  currency        String    @default("CNY")
+  status          SettlementStatus @default(PENDING)
+  
+  settledAt       DateTime?
+  createdAt       DateTime  @default(now())
+  
+  @@map("settlements")
+}
+
+// 5.2.2 平台收入统计
+model PlatformRevenue {
+  id              String    @id @default(uuid())
+  
+  // 收入类型
+  revenueType     RevenueType
+  
+  // 金额
+  amount          Float
+  currency        String    @default("CNY")
+  
+  // 来源
+  fromProjectId   String?
+  fromUserId     String?
+  
+  // 分配
+  allocation      Json?     // 收入分配明细
+  
+  // 时间
+  revenueDate     DateTime  @default(now())
+  month           String    // 格式: YYYY-MM
+  
+  @@map("platform_revenues")
+}
+
+enum RevenueType {
+  PLATFORM_FEE    // 平台抽成
+  SKILL_SALE      // Skill销售（未来）
+  VERIFICATION    // 认证费用（未来）
+}
+
+enum SettlementStatus {
+  PENDING
+  COMPLETED
+  FAILED
+  REFUNDED
+}
+
+// 5.2.3 抽成计算公式
+const calculatePlatformFee = (amount: number, mode: ProjectMode): { fee: number; net: number } => {
+  const feeRate = mode === 'COMMUNITY' ? 0.05 : 0.03
+  const fee = Math.round(amount * feeRate * 100) / 100
+  const net = amount - fee
+  return { fee, net }
+}
+```
+
+### 5.3 抽成查询API
+
+```typescript
+// 查询结算记录
+GET /api/v1/settlements?userId=xxx
+
+// 查询平台收入统计
+GET /api/v1/admin/revenue?month=2026-02
+
+// 结算详情
+GET /api/v1/settlements/:id
+```
+
+---
+
+## 六、v0.8新增：争议仲裁机制
+
+### 6.1 仲裁流程
+
+```
+争议触发：发起人和参与者对验收结果有分歧
+    │
+    ▼
+Step 1：双方协商（24小时内）
+    │
+    ▼
+Step 2：协商不成 → 发起仲裁
+    │
+    ├── 参与者提交证据
+    ├── 发起人提交证据
+    └── 平台介入审核
+    │
+    ▼
+Step 3：平台仲裁结果
+    ├── 维持发起人决定
+    ├── 推翻发起人决定（参与者胜诉）
+    └── 部分退款（各退一步）
+    │
+    ▼
+Step 4：信用记录
+    ├── 胜诉方信用 +10
+    └── 败诉方信用 -5
+```
+
+### 6.2 仲裁数据模型
+
+```typescript
+// 6.2.1 争议表
+model Dispute {
+  id              String    @id @default(uuid())
+  
+  // 关联
+  projectId       String
+  project         Project    @relation(fields: [projectId], references: [id])
+  
+  taskId          String
+  task            Task       @relation(fields: [taskId], references: [id])
+  
+  // 争议方
+  initiatorId     String     // 发起争议者（参与者）
+  initiator       User       @relation(fields: [initiatorId], references: [id])
+  
+  respondentId    String     // 应诉方（发起人）
+  respondent      User       @relation(fields: [respondentId], references: [id])
+  
+  // 争议内容
+  reason         String     // 争议原因
+  initiatorEvidence String?  // 发起方证据
+  respondentEvidence String? // 应诉方证据
+  
+  // 平台仲裁
+  arbitratorId    String?    // 仲裁员
+  arbitrator      User?      @relation(fields: [arbitratorId], references: [id])
+  
+  decision       DisputeDecision?  // 仲裁决定
+  decisionReason  String?    // 仲裁理由
+  
+  // 金额处理
+  refundAmount   Float?     // 退还金额
+  penaltyAmount  Float?     // 惩罚金额
+  
+  // 时间
+  status        DisputeStatus @default(OPEN)
+  
+  createdAt     DateTime  @default(now())
+  respondedAt   DateTime?  // 应诉时间
+  arbitratedAt  DateTime?  // 仲裁时间
+  closedAt      DateTime?  // 关闭时间
+  
+  @@map("disputes")
+}
+
+enum DisputeStatus {
+  OPEN          // 开放（双方举证中）
+  EVIDENCE     // 证据已提交，待仲裁
+  ARBITRATING  // 仲裁中
+  CLOSED       // 已关闭
+}
+
+enum DisputeDecision {
+  SUSTAIN_INITIATOR    // 维持发起人决定
+  OVERTURN_INITIATOR   // 推翻发起人决定（参与者胜诉）
+  COMPROMISE          // 各退一步（部分退款）
+}
+
+// 6.2.2 争议证据表
+model DisputeEvidence {
+  id              String    @id @default(uuid())
+  
+  disputeId       String
+  dispute         Dispute   @relation(fields: [disputeId], references: [id])
+  
+  // 证据方
+  submitterId     String
+  submitter       User      @relation(fields: [submitterId], references: [id])
+  
+  // 证据内容
+  type            EvidenceType
+  description     String
+  evidenceUrls    String[]
+  
+  // 时间
+  submittedAt     DateTime  @default(now())
+  
+  @@map("dispute_evidence")
+}
+
+enum EvidenceType {
+  CODE           // 代码证据
+  COMMUNICATION  // 沟通记录
+  SCREENSHOT     // 截图
+  LINK           // 链接
+  OTHER          // 其他
+}
+
+// 6.2.3 仲裁员表（可选，未来扩展）
+model Arbitrator {
+  userId          String    @id
+  user            User      @relation(fields: [userId], references: [id])
+  
+  // 资质
+  casesHandled    Int       @default(0)    // 处理案件数
+  accuracyRate    Float     @default(0)    // 准确率
+  
+  // 收入
+  totalEarnings   Float     @default(0)
+  
+  @@map("arbitrators")
+}
+```
+
+### 6.3 仲裁API
+
+```typescript
+// 发起争议
+POST /api/v1/disputes
+{
+  taskId: "xxx",
+  reason: "xxx",
+  evidence: [...]
+}
+
+// 应诉
+POST /api/v1/disputes/:id/respond
+{
+  evidence: [...]
+}
+
+// 仲裁（管理员）
+POST /api/v1/disputes/:id/arbitrate
+{
+  decision: "COMPROMISE",
+  decisionReason: "xxx",
+  refundAmount: 600
+}
+
+// 查询争议
+GET /api/v1/disputes?status=OPEN
+```
+
+---
+
+## 七、v0.8新增：防作弊机制
+
+### 7.1 防作弊策略
+
+```
+防作弊策略：
+├─ 技能测试
+│  ├─ 防作弊：限时+随机题库+录像
+│  └─ 多次取最高（避免发挥失常）
+│
+├─ 作品集评估
+│  ├─ 防作弊：AI检测代码相似度
+│  ├─ 防作弊：Git提交历史验证
+│  └─ 人工抽查
+│
+└─ 同行评议
+    ├─ 防作弊：评议人需信用>=100
+    ├─ 防作弊：同一评议人最多评议3次/天
+    └─ 防作弊：匿名评议
+```
+
+### 7.2 防作弊数据模型
+
+```typescript
+// 7.2.1 技能测试记录（扩展）
+model SkillTestResult {
+  id              String    @id @default(uuid())
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  
+  testType        String
+  testUrl         String    // 测试链接
+  
+  // 测试结果
+  score           Float
+  totalQuestions  Int
+  correctAnswers  Int
+  
+  // 防作弊数据
+  antiCheat       Json?     // 防作弊数据
+  // {
+  //   "duration": 1800,        // 测试时长（秒）
+  //   "tabSwitches": 5,       // 切换标签次数
+  //   "copyAttempts": 2,       // 复制尝试次数
+  //   "screenshotCount": 1,    // 截屏次数
+  //   "faceVerified": true,    // 人脸验证
+  //   "browserVerified": true,  // 浏览器验证
+  //   "ipConsistent": true     // IP一致性
+  // }
+  
+  suspicious      Boolean   @default(false)  // 是否可疑
+  flaggedAt       DateTime?
+  
+  skillId         String
+  createdAt       DateTime  @default(now())
+  
+  @@index([userId, testType])
+  @@map("skill_test_results")
+}
+
+// 7.2.2 作品集验证记录
+model PortfolioVerification {
+  id              String    @id @default(uuid())
+  
+  userId          String
+  user            User      @relation(fields: [userId], references: [id])
+  
+  portfolioUrl    String
+  
+  // 验证结果
+  verificationType VerificationType
+  result          VerificationResult
+  
+  // AI分析
+  aiAnalysis      Json?     // AI分析结果
+  // {
+  //   "similarity": 0.15,       // 与其他作品相似度
+  //   "complexity": 85,         // 复杂度评分
+  //   "originality": 90,        // 原创性评分
+  //   "quality": 88              // 质量评分
+  // }
+  
+  // Git验证
+  gitVerified     Boolean   @default(false)
+  commitHistory   Json?     // 提交历史
+  
+  // 人工复核
+  manualReview    Boolean   @default(false)
+  reviewerId      String?
+  reviewResult    String?
+  
+  createdAt       DateTime  @default(now())
+  
+  @@map("portfolio_verifications")
+}
+
+enum VerificationType {
+  AI_AUTO
+  MANUAL
+  HYBRID
+}
+
+enum VerificationResult {
+  PASS
+  FAIL
+  SUSPICIOUS
+  NEED_REVIEW
+}
+
+// 7.2.3 同伴评议限制
+model PeerReviewLimit {
+  id              String    @id @default(uuid())
+  
+  reviewerId      String
+  reviewer        User      @relation(fields: [reviewerId], references: [id])
+  
+  // 限制
+  limitType       ReviewLimitType
+  
+  // 计数
+  dailyCount      Int       @default(0)
+  dailyLimit      Int       @default(3)  // 每天最多3次
+  
+  // 时间
+  date           DateTime  @default(now())
+  
+  @@unique([reviewerId, date, limitType])
+  @@map("peer_review_limits")
+}
+
+enum ReviewLimitType {
+  DAILY_COUNT    // 每日评议数量
+  RECENT_COUNT   // 最近7天评议数量
+}
+
+// 7.2.4 作弊举报记录
+model CheatingReport {
+  id              String    @id @default(uuid())
+  
+  // 被举报人
+  reportedUserId  String
+  reportedUser    User      @relation(fields: [reportedUserId], references: [id])
+  
+  // 举报人
+  reporterId      String
+  reporter        User      @relation(fields: [reporterId], references: [id])
+  
+  // 举报内容
+  reportType     CheatingType
+  evidence       String
+  evidenceUrls   String[]
+  
+  // 处理结果
+  status         CheatingReportStatus @default(PENDING)
+  investigation  String?
+  result        String?
+  
+  // 时间
+  reportedAt     DateTime  @default(now())
+  resolvedAt     DateTime?
+  
+  @@map("cheating_reports")
+}
+
+enum CheatingType {
+  TEST_CHEATING     // 测试作弊
+  PORTFOLIO_FAKE    // 作品集造假
+  FAKE_REVIEW       // 虚假评议
+  OTHER             // 其他
+}
+
+enum CheatingReportStatus {
+  PENDING
+  INVESTIGATING
+  CONFIRMED
+  DISMISSED
+}
+```
+
+### 7.4 防作弊API
+
+```typescript
+// 提交技能测试
+POST /api/v1/skill-tests
+{
+  testType: "python",
+  score: 85,
+  antiCheat: {...}
+}
+
+// 获取作品集验证
+GET /api/v1/portfolios/:id/verification
+
+// 提交同伴评议
+POST /api/v1/peer-reviews
+{
+  userId: "xxx",
+  score: 4.5,
+  comment: "xxx"
+}
+
+// 检查评议限制
+GET /api/v1/peer-reviews/limits?reviewerId=xxx
+
+// 举报作弊
+POST /api/v1/cheating-reports
+{
+  reportedUserId: "xxx",
+  type: "TEST_CHEATING",
+  evidence: "xxx"
+}
+```
+
+---
+
+## 八、v0.8新增：最终信用计算API
+
+### 8.1 信用计算公式
+
+```typescript
+// 最终信用 = 初始信用×衰减 + 长期信用
+const calculateFinalCredit = (
+  initialScore: number,
+  longTermScore: number,
+  monthsSinceRegistration: number
+): number => {
+  // 初始信用权重：3个月内1.0，之后每月递减0.1，最低0.1
+  const initialWeight = Math.max(
+    1.0 - Math.max(0, monthsSinceRegistration - 3) * 0.1,
+    0.1
+  )
+  
+  const longTermWeight = 1.0 - initialWeight
+  
+  return initialScore * initialWeight + longTermScore * longTermWeight
+}
+
+// 长期信用计算
+const calculateLongTermCredit = (user: User): number => {
+  // 长期信用 = 项目数×0.2 + 成功率×0.5 + 好评率×0.3
+  const projectScore = Math.min(user.totalProjects * 10, 100)
+  const successScore = user.approvalRate * 100
+  const reviewScore = user.goodReviewRate * 100
+  
+  return projectScore * 0.2 + successScore * 0.5 + reviewScore * 0.3
+}
+```
+
+### 8.2 信用查询API
+
+```typescript
+// 获取用户最终信用
+GET /api/v1/users/:id/credit
+
+// 响应示例
+{
+  "initialScore": 86,
+  "initialWeight": 0.7,
+  "initialExpiresAt": "2026-05-18",
+  "longTermScore": 92,
+  "finalScore": 87.8,
+  "creditHistory": [
+    {
+      "date": "2026-02-15",
+      "change": "+100",
+      "source": "项目完成",
+      "description": "AI代码审查工具环节1"
+    }
+  ]
+}
+
+// 获取信用历史
+GET /api/v1/users/:id/credit-history?limit=100
+
+// 获取信用排名
+GET /api/v1/users/credit-rankings?type=participant&limit=100
+```
+
+---
+
+**文档版本**: v0.8
+**更新日期**: 2026-02-18
+**核心原则**：优秀的人的经验以Skill方式用于项目各环节
